@@ -1,6 +1,9 @@
 # ChangeLog for games-board/scid
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/scid/ChangeLog,v 1.13 2006/12/01 20:59:46 wolf31o2 Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/scid/ChangeLog,v 1.14 2007/03/12 13:52:37 genone Exp $
+
+  12 Mar 2007; Marius Mauch <genone@gentoo.org> scid-3.6.1-r1.ebuild:
+  Replacing einfo with elog
 
   01 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> scid-3.6.1.ebuild,
   scid-3.6.1-r1.ebuild:
